--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,35 @@
-setuptools~=69.5.1
-click~=8.1.7
-flask~=3.0.3
-werkzeug~=3.0.3
-SQLAlchemy~=2.0.30
-docker~=7.1.0
-wtforms~=3.1.2
+alembic==1.15.1
+bidict==0.23.1
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+docker==7.1.0
+Flask==3.0.3
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-SocketIO==5.5.1
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+greenlet==3.1.1
+h11==0.14.0
+idna==3.10
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.9
+MarkupSafe==3.0.2
+packaging==24.2
+pluggy==1.5.0
+pytest==8.3.5
+python-engineio==4.11.2
+python-socketio==5.12.1
+requests==2.32.3
+setuptools==69.5.1
+simple-websocket==1.1.0
+SQLAlchemy==2.0.39
+typing_extensions==4.12.2
+urllib3==2.3.0
+Werkzeug==3.0.6
+wsproto==1.2.0
+WTForms==3.1.2
