Convert from evenlet to gevent for better debug support in vscode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,7 +28,8 @@
                 "run",
             ],
             "jinja": true,
-            "justMyCode": true
+            "justMyCode": true,
+            "gevent":true
         },
         {
             "name": "Python Debugger: NWN Server",
