--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.13.2
 bidict==0.23.1
 blinker==1.8.2
+cachelib==0.13.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
@@ -10,9 +11,11 @@ eventlet==0.39.1
 Flask==3.0.3
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
+Flask-Session==0.8.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
+gevent==24.11.1
 greenlet==3.1.1
 gunicorn==22.0.0
 h11==0.14.0
@@ -21,6 +24,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
+msgspec==0.19.0
 packaging==24.1
 python-engineio==4.11.2
 python-socketio==5.12.1
